--- a/global.css
+++ b/global.css
@@ -5,23 +5,20 @@ body {
   height: 100%;
 }
 
-.container {
-  background-color: white;
-  width: 100%;
-  height: 100%;
-}
 #navbar {
   display: flex;
-}
-h3 {
-  font-size: 20px;
-  opacity: 0.7;
-  font-family: "Ubuntu", sans-serif;
-}
-#navbar img {
-  width: 64px;
-  height: 66px;
-  margin: 5px 0 0 9px;
+
+  h3 {
+    font-size: 20px;
+    opacity: 0.7;
+    font-family: "Ubuntu", sans-serif;
+  }
+
+  img {
+    width: 64px;
+    height: 66px;
+    margin: 5px 0 0 9px;
+  }
 }
 .buttons-container {
   display: flex;
@@ -30,24 +27,23 @@ h3 {
   margin-top: 25px;
   margin-left: 463px;
 
-  .button1,
-  .button2,
-  .button3 {
+  .learn,
+  .blog,
+  .about-us {
     width: 74px;
     height: 23px;
     font-size: 13px;
     font-weight: 500;
     color: rgba(44, 181, 180, 1);
-    border: none;
-    background-color: white;
     font-family: "Ubuntu", sans-serif;
     flex: 1;
+    text-decoration: none;
   }
-  .button3 {
+  .about-us {
     width: 106px;
   }
 }
-.button4 {
+.get-started {
   width: 161px;
   height: 40px;
   background-color: rgba(44, 181, 180, 1);
@@ -59,12 +55,17 @@ h3 {
   font-weight: 500;
   margin-top: 17px;
   margin-left: 100px;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.25);
 }
-.frame1 {
-  width: 100%;
+.container {
+  display: flex;
+}
+.left-container {
+  width: 50%;
   height: 500px;
   background-color: rgba(207, 243, 243, 1);
   margin-top: 0;
+  display: 1;
 
   .text {
     width: 335px;
@@ -75,11 +76,88 @@ h3 {
     line-height: 60px;
     color: rgba(61, 93, 121, 1);
     transform: translate(-10%, 100%);
+
+    button {
+      width: 161px;
+      height: 40px;
+      background-color: rgba(44, 181, 180, 1);
+      font-family: "Ubuntu", sans-serif;
+      border-radius: 5px;
+      border: none;
+      font-size: 11px;
+      color: white;
+      font-weight: 500;
+      box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.25);
+    }
   }
+
   p {
     color: rgba(144, 154, 161, 1);
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
+  }
+  a {
+    color: rgba(68, 105, 137, 1);
+    font-weight: 400px;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 14px;
+  }
+}
+.right-container {
+  flex: 1;
+  img {
+    width: 100%;
+    height: 500px;
+    background-color: rgba(207, 243, 243, 1);
+  }
+}
+.container2 {
+  width: 100%;
+  height: 700px;
+  h3 {
+    font-size: 50px;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    text-align: center;
+    color: rgba(61, 93, 121, 1);
+  }
+  button {
+    width: 161px;
+    height: 40px;
+    background-color: rgba(44, 181, 180, 1);
+    font-family: "Ubuntu", sans-serif;
+    border-radius: 5px;
+    border: none;
+    font-size: 11px;
+    color: white;
+    font-weight: 500;
+    display: block;
+    margin: 0 auto;
+    box-shadow: 0 3px 2px 0 rgba(0, 0, 0, 0.25);
+  }
+  ul {
+    display: flex;
+    justify-content: center;
+  }
+  ul li {
+    list-style-type: none;
+  }
+  ul li img {
+    width: 272px;
+    height: 272px;
+    margin: 50px 30px 0 30px;
+    border-radius: 5px;
+  }
+  ul li p {
+    text-align: center;
+    width: 200px;
+    margin-left: 40px;
+    font-size: 17px;
+    font-family: "Ubuntu", sans-serif;
+    color: rgba(44, 181, 180, 1);
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 5px;
   }
 }
