--- a/global.css
+++ b/global.css
@@ -160,4 +160,28 @@ body {
     line-height: 26px;
     margin-top: 5px;
   }
+  img {
+    margin-left: 450px;
+  }
+}
+.endline {
+  width: 100%;
+  height: 220px;
+  background-color: rgba(207, 243, 243, 1);
+  margin-top: 110px;
+
+  h3 {
+    font-size: 30px;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    text-align: center;
+    color: rgba(61, 93, 121, 1);
+    padding-top: 40px;
+  }
+  .options {
+    display: flex;
+    img {
+      margin-left: 110px;
+    }
+  }
 }
