--- a/global.css
+++ b/global.css
@@ -27,9 +27,7 @@ body {
   margin-top: 25px;
   margin-left: 463px;
 
-  .learn,
-  .blog,
-  .about-us {
+  a {
     width: 74px;
     height: 23px;
     font-size: 13px;
@@ -43,7 +41,7 @@ body {
     width: 106px;
   }
 }
-.get-started {
+.get-started-button {
   width: 161px;
   height: 40px;
   background-color: rgba(44, 181, 180, 1);
@@ -53,8 +51,7 @@ body {
   font-size: 11px;
   color: white;
   font-weight: 500;
-  margin-top: 17px;
-  margin-left: 100px;
+  margin: 17px 0 0 100px;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.25);
 }
 .container {
@@ -89,19 +86,18 @@ body {
       font-weight: 500;
       box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.25);
     }
-  }
-
-  p {
-    color: rgba(144, 154, 161, 1);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-  }
-  a {
-    color: rgba(68, 105, 137, 1);
-    font-weight: 400px;
-    font-family: "Ubuntu", sans-serif;
-    font-size: 14px;
+    p {
+      color: rgba(144, 154, 161, 1);
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 24px;
+    }
+    a {
+      color: rgba(68, 105, 137, 1);
+      font-weight: 400px;
+      font-family: "Ubuntu", sans-serif;
+      font-size: 14px;
+    }
   }
 }
 .right-container {
@@ -121,6 +117,7 @@ body {
     font-weight: 700;
     text-align: center;
     color: rgba(61, 93, 121, 1);
+    margin-top: 100px;
   }
   button {
     width: 161px;
@@ -152,36 +149,86 @@ body {
   ul li p {
     text-align: center;
     width: 200px;
-    margin-left: 40px;
     font-size: 17px;
     font-family: "Ubuntu", sans-serif;
     color: rgba(44, 181, 180, 1);
     font-weight: 400;
     line-height: 26px;
-    margin-top: 5px;
+    margin: 5px 0 0 40px;
   }
-  img {
-    margin-left: 450px;
-  }
-}
-.endline {
-  width: 100%;
-  height: 220px;
-  background-color: rgba(207, 243, 243, 1);
-  margin-top: 110px;
 
-  h3 {
-    font-size: 30px;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
-    text-align: center;
-    color: rgba(61, 93, 121, 1);
-    padding-top: 40px;
-  }
-  .options {
+  .container3 {
     display: flex;
+    justify-content: space-between;
+    .left {
+      width: 250px;
+      height: 207px;
+      margin: 138px 50px 0 140px;
+      .p-01 {
+        margin-bottom: 115px;
+      }
+    }
+    .right {
+      margin-top: 138px;
+      width: 250px;
+      height: 207px;
+      margin-right: 150px;
+    }
+    .p-03 {
+      margin-bottom: 95px;
+    }
+    span {
+      font-family: "Ubuntu", sans-serif;
+      font-weight: 700;
+      font-size: 16px;
+      color: rgba(61, 93, 121, 1);
+    }
+    p {
+      width: 100%;
+      font-size: 17px;
+      font-family: "Ubuntu", sans-serif;
+      color: rgba(44, 181, 180, 1);
+      font-weight: 400;
+      line-height: 1.5;
+    }
+    h4 {
+      font-family: "Ubuntu", sans-serif;
+      font-weight: 700;
+      font-size: 31px;
+      color: rgba(80, 93, 104, 1);
+      margin: 0;
+      padding: 0;
+    }
+  }
+
+  .main {
     img {
-      margin-left: 110px;
+      width: 300px;
+      margin-right: 80px;
+    }
+    button {
+      margin-left: 70px;
+    }
+  }
+  .endline {
+    width: 100%;
+    height: 220px;
+    background-color: rgba(207, 243, 243, 1);
+    margin-top: 110px;
+
+    h3 {
+      font-size: 30px;
+      font-family: "Ubuntu", sans-serif;
+      font-weight: 700;
+      text-align: center;
+      color: rgba(61, 93, 121, 1);
+      padding-top: 40px;
+    }
+    .options {
+      display: flex;
+      img {
+        margin-left: 110px;
+      }
     }
   }
 }
