--- a/global.css
+++ b/global.css
@@ -97,6 +97,7 @@ body {
       font-weight: 400px;
       font-family: "Ubuntu", sans-serif;
       font-size: 14px;
+      margin-left: 13px;
     }
   }
 }
@@ -112,7 +113,7 @@ body {
   width: 100%;
   height: 700px;
   h3 {
-    font-size: 50px;
+    font-size: 45px;
     font-family: "Ubuntu", sans-serif;
     font-weight: 700;
     text-align: center;
@@ -231,4 +232,71 @@ body {
       }
     }
   }
+
+  .heading {
+    h2,
+    h4 {
+      font-size: 40px;
+      font-family: "Ubuntu", sans-serif;
+      font-weight: 700;
+      text-align: center;
+      color: rgba(61, 93, 121, 1);
+    }
+    h4 {
+      font-size: 19px;
+    }
+    h6 {
+      color: rgba(44, 181, 180, 1);
+      font-weight: 400;
+      font-family: "Ubuntu", sans-serif;
+      text-align: center;
+      font-size: 15px;
+    }
+  }
+}
+.slider {
+  display: flex;
+  position: relative;
+  overflow: hidden;
+
+  .images {
+    display: flex;
+    width: 100%;
+    height: 57%;
+    margin-left: 100px;
+    gap: 25px;
+
+    img {
+      height: 57%;
+      width: 100%;
+      transition: all 0.15s ease;
+    }
+    input {
+      display: none;
+    }
+  }
+  .dots {
+    display: flex;
+    margin-top: 300px;
+    margin-right: 700px;
+
+    label {
+      height: 20px;
+      width: 20px;
+      cursor: pointer;
+      transition: all 0.15s ease;
+    }
+  }
+}
+#img1:checked ~ .m1 {
+  margin-left: 0;
+}
+#img2:checked ~ .m2 {
+  margin-left: -100%;
+}
+#img3:checked ~ .m3 {
+  margin-left: -200%;
+}
+#img4:checked ~ .m4 {
+  margin-left: -200%;
 }
