--- a/global.css
+++ b/global.css
@@ -253,50 +253,126 @@ body {
       font-size: 15px;
     }
   }
-}
-.slider {
-  display: flex;
-  position: relative;
-  overflow: hidden;
-
-  .images {
+  .slider {
     display: flex;
-    width: 100%;
-    height: 57%;
-    margin-left: 100px;
-    gap: 25px;
+    position: relative;
+    overflow: hidden;
 
-    img {
-      height: 57%;
+    .images {
+      display: flex;
       width: 100%;
-      transition: all 0.15s ease;
-    }
-    input {
-      display: none;
-    }
-  }
-  .dots {
-    display: flex;
-    margin-top: 300px;
-    margin-right: 700px;
+      height: 57%;
+      margin-left: 100px;
+      gap: 25px;
 
-    label {
-      height: 20px;
-      width: 20px;
-      cursor: pointer;
-      transition: all 0.15s ease;
+      img {
+        height: 57%;
+        width: 100%;
+        transition: all 0.15s ease;
+      }
+      input {
+        display: none;
+      }
+    }
+    .dots {
+      display: flex;
+      margin-top: 300px;
+      margin-right: 700px;
+
+      label {
+        height: 20px;
+        width: 20px;
+        cursor: pointer;
+        transition: all 0.15s ease;
+      }
+      #img1:checked ~ .m1 {
+        margin-left: 0;
+      }
+      #img2:checked ~ .m2 {
+        margin-left: -100%;
+      }
+      #img3:checked ~ .m3 {
+        margin-left: -200%;
+      }
+      #img4:checked ~ .m4 {
+        margin-left: -200%;
+      }
     }
   }
-}
-#img1:checked ~ .m1 {
-  margin-left: 0;
-}
-#img2:checked ~ .m2 {
-  margin-left: -100%;
-}
-#img3:checked ~ .m3 {
-  margin-left: -200%;
-}
-#img4:checked ~ .m4 {
-  margin-left: -200%;
+  .content1 {
+    display: flex;
+    gap: 30px;
+
+    .img-container {
+      img {
+        width: 250px;
+        height: 250px;
+        border-radius: 1px;
+        margin-left: 100px;
+        margin-top: 120px;
+      }
+    }
+    .text {
+      width: 60px;
+      height: 50px;
+      background-color: rgb(238, 250, 250);
+      color: rgba(61, 93, 121, 1);
+      font-weight: 500;
+      margin-top: 120px;
+      font-size: 40px;
+      padding: 15px;
+      font-family: "Ubuntu", sans-serif;
+    }
+    .intro {
+      margin-top: 80px;
+      margin-left: 60px;
+
+      h1 {
+        font-size: 42px;
+        font-family: "Ubuntu", sans-serif;
+        font-weight: 700;
+        color: rgba(61, 93, 121, 1);
+      }
+      p {
+        font-size: 17px;
+        font-family: "Ubuntu", sans-serif;
+        color: rgba(44, 181, 180, 1);
+        font-weight: 400;
+        line-height: 0;
+        margin-top: -8px;
+      }
+    }
+  }
+  .content2 {
+    display: flex;
+    margin-left: 100px;
+    margin-top: 50px;
+
+    .text-container {
+      h1 {
+        font-size: 42px;
+        font-family: "Ubuntu", sans-serif;
+        font-weight: 700;
+        color: rgba(61, 93, 121, 1);
+      }
+      p {
+        font-size: 17px;
+        font-family: "Ubuntu", sans-serif;
+        color: rgba(44, 181, 180, 1);
+        font-weight: 400;
+        line-height: 0;
+        margin-top: -8px;
+      }
+    }
+    img {
+      width: 500px;
+      height: 503px;
+      margin-left: 237px;
+      margin-top: -140px;
+    }
+  }
+  .get-started-button {
+    margin-left: 0;
+    margin-top: 50px;
+  }
 }
