--- a/global.css
+++ b/global.css
@@ -64,7 +64,7 @@ body {
   margin-top: 0;
   display: 1;
 
-  .text {
+  .say-goodbye {
     width: 335px;
     height: 100px;
     font-size: 50px;
